--- a/src/app.html
+++ b/src/app.html
@@ -9,4 +9,6 @@
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
+	<link rel='stylesheet' href='./Chat.svelte'>
+	
 </html>
